@@ -130,7 +130,7 @@ $rcmail_config['sieverules_use_elsif'] = TRUE;
 // Fileinto action options
 // 0 - List only subscribed folders
 // 1 - List subscribed and unsubscribed folders
-// 2 - List subscribed and unsubscribed folders and allow users to enter a folder name (for advanced users only)
+// 2 - List subscribed and unsubscribed folders and allow users to enter a folder name (for advanced users only, requires sieve mailbox extension)
 $rcmail_config['sieverules_fileinto_options'] = 0;
 
 // For information on customising the rule file see "The structure of the rule file" in the README
