@@ -1,6 +1,10 @@
 Roundcube Webmail SieveRules
 ============================
 
+2011 08 06
+==========
+ * Improve fileinto :create, now requires mailbox extension
+
 2011 06 19
 ==========
  * Add button to insert sig into vacation message
